--- a/src/WorldTravel.Domain.Shared/Localization/WorldTravel/tr.json
+++ b/src/WorldTravel.Domain.Shared/Localization/WorldTravel/tr.json
@@ -36,6 +36,8 @@
     "Search": "Ara",
     "Messages": "Mesajlar",
     "WorldwideTravel": "Dünya Çapında Seyahat",
+    "SelectCountry": "Ülke seçiniz",
+
 
     "ForgotYourPassword": "Parolamı Unuttum",
     "WantToBeRegister": "Üye Olmak İstiyorum",
