--- a/src/WorldTravel.Domain.Shared/Localization/WorldTravel/en.json
+++ b/src/WorldTravel.Domain.Shared/Localization/WorldTravel/en.json
@@ -8,88 +8,169 @@
 
 
     //GENEL
-    //"ProjectName": "WorldTravel",
-    //"Home": "Ana sayfa",
-    //"Popular": "Popüler",
-    //"Cities": "Şehirler",
-    //"Register": "Üye Ol",
-    //"LoginB": "GİRİŞ YAP",
-    //"Login": "Giriş Yap",
-    //"Profile": "PROFİLİM",
-    //"Logout": "Çıkış Yap",
-    //"Message": "Mesaj",
-    //"Loading": "Yükleniyor...",
-    //"Choose": "Seçiniz",
-    //"Name": "Ad",
-    //"Surname": "Soyad",
-    //"UserName": "Kullanıcı Adı",
-    //"Email": "Email",
-    //"PhoneNumber": "Telefon",
-    //"Password": "Parola",
-    //"ConfirmPassword": "Parola Doğrulama",
-    //"Gender": "Cinsiyet",
-    //"BirthDate": "Doğum Tarihi",
-    //"Description": "Açıklama",
-    //"MyAccountInformation": "Hesap Bilgilerim",
-    //"MyAdverts": "İlanlarım",
-    //"SelectImage": "Profil Resmi Seç",
-    //"Search": "Ara",
-    //"Messages": "Mesajlar",
+    "ProjectName": "World Visa Turkey",
+    "Home": "Home Page",
+    "Popular": "Popular",
+    "Cities": "Cities",
+    "Register": "Register",
+    "LoginB": "LOGIN",
+    "Login": "Login",
+    "Profile": "PROFILE",
+    "Logout": "Logout",
+    "Loading": "Loading...",
+    "Choose": "Choose",
+    "Name": "Name",
+    "Surname": "Surname",
+    "UserName": "UserName",
+    "Email": "Email",
+    "PhoneNumber": "PhoneNumber",
+    "Password": "Password",
+    "ConfirmPassword": "Confirm Password",
+    "Gender": "Gender",
+    "BirthDate": "BirthDate",
+    "Description": "Description",
+    "MyAccountInformation": "My Account Information",
+    "MyAdverts": "My Adverts",
+    "SelectImage": "Select Image",
+    "Search": "Search",
+    "SelectCountry": "Select Country",
+    "Filter": "Filter",
+    "FullName": "FullName",
+    "CountryName": "Country Name",
+    "CreatedDate": "Created Date",
+    "IsContacted": "Is Contacted",
+    "True": "True",
+    "False": "False",
+    "Country": "Ülke",
+    "CreateForm": "Create Form",
+    "ChangeContactedStatus": "Change Contacted Status",
+    "Contanct": "Contanct",
+    "HowProcessWork": "How the Process Works",
+    "Image": "Image",
+    //"ChooseImage": "Yeni Görsel Seçin",
+    //"ChooseImages": "Yeni Görselleri Seçin",
+    "NewSlaytImages": "Click here to Add New Slaty Images",
+    "Title": "Title",
+    "ExtraDescription": "Ekstra Description",
+    "ShortDescription": "Kısa Description",
+    "OnlySeenCountryList": "Only visible on the countries page",
+    "MainImage": "Main Image",
+    "ContactMe": "Contact Us",
+    "Countries": "Countries",
+    "Rank": "Rank",
+    "IsSeenHomePage": "IsSeenHomePage?",
+    "EnterCountryName": "Enter Country Name",
+    "ReadMore": "Read More",
+    "ClickCallMe": "Click to call",
+    "ClickSendMail": "Click to send mail",
+    "SendMail": "Send Mail",
+    "Views": "Views",
+    "Comment": "Comment",
+    "Comments": "Comments",
+    "Details": "Details",
+    //"ImageKey": "Görsel Key",
+    //"CountryFlagImageUrl": "Ülke Bayrak Resmi",
+    "PopulerCountries": "Populer Countries",
+    "PopularServices": "Popular Services",
+    "ViewVideo": "Show Video",
+    "Zoom": "Zoom",
+    "WriteReview": "Write a Review", //Write a review
+    "CountryId": "Country",
 
-    //"ForgotYourPassword": "Parolamı Unuttum",
-    //"WantToBeRegister": "Üye Olmak İstiyorum",
-    //"LoginInstead": "Bunun yerine oturum aç",
+
+    "ReturnUserPage": "User Page",
+    "ProfileS": "Profile",
+    //PERMISSION
+    "Permission:Create": "Create",
+    "Permission:Edit": "Edit",
+    "Permission:Delete": "Delete",
+    "Permission:ManagePermissions": "Manage Permissions",
+
+    //FORM
+    "FormManagement": "Form Management",
+    "Forms": "Forms",
+
+    "ForgotYourPassword": "Forgot Your Password",
+    "WantToBeRegister": "Üye Olmak İstiyorum",
+    "LoginInstead": "Want To Be Register",
+
+    //CountryContent
+    "CountryContentManagement": "Country Content Management",
+    "CountryContents": "Country Contents",
+    "NewCountryContent": "New Country Content",
+    "ReadCount": "Number of Reads",
+    "TotalImageCount": "Total Image Count",
+    "TotalVideoCount": "Total Video Count",
+
+    //MENU
+    "UserManagement": "User Management",
+    "RoleManagement": "Role Management",
+    "AdminPage": "Admin Page",
+    "PageManagement": "Page Management",
+
+    //ENUMS
+    "Enum:Status:0": "Unstated",
+    "Enum:Status:-1": "Passive",
+    "Enum:Status:1": "Active",
+    "Enum:Status:-255": "Deleted",
+
+    "Unstated": "Unstated",
+    "Male": "Male",
+    "Female": "Female",
+    "DoNotWantSpecify": "Belirtmek İstemiyorum",
+
+    "Enum:GenderType:1": "Erkek",
+    "Enum:GenderType:2": "Kadın",
+    "Enum:GenderType:3": "Do Not Want Specify",
 
 
-    ////MENU
-    //"UserManagement": "Kullanıcı Yönetimi",
-    //"RoleManagement": "Rol Yönetimi",
-    //"AdminPage": "Admin Ana Sayfa",
-    //"PageManagement": "Sayfa Yönetimi",
-    //"MesageManagement": "Mesaj Yönetimi",
-    //"MesageManagementSee": "Görme",
-
-    ////MESSAGE
-    //"Mute": "Sessize Al",
-    //"Block": "Blokla",
-    //"DeleteMessage": "Mesajı Sil",
-    //"WriteMessage": "Mesaj yaz..",
-    //"Send": "Gönder",
-
-    ////ENUMS
-    //"Enum:Status:0": "Belirtilmedi",
-    //"Enum:Status:-1": "Pasif",
-    //"Enum:Status:1": "Aktif",
-    //"Enum:Status:-255": "Silinmiş",
-
-    //"Unstated": "Belirtilmedi",
-    //"Male": "Erkek",
-    //"Female": "Kadın",
-
-    //"Enum:GenderType:1": "Erkek",
-    //"Enum:GenderType:2": "Kadın",
-
-
-    ////ERORS
-    //"ReturnHomePage": "Ana sayfaya dön",
-    //"NotFoundPage": "Sayfa Bulunamadı",
-    //"UnauthorizedPageB": "BU SAYFAYA ERİŞİM İZNİNİZ YOK",
+    //ERORS
+    "ReturnHomePage": "Return Home Page",
+    "NotFoundPage": "Not Found Page",
+    "UnauthorizedPageB": "Unauthorized Page",
     //"YouMustLogin": "Lütfen tekrardan giriş yapınız",
-    //"NotAllowedProcess": "Bu işlemi yapmaya izniniz yok",
-    //"UnexpectedErrorPage": "Beklenmedik bir hata oluştu.",
-    //"SorryAnErrorHasOccurred": "Üzgünüm, bir hata oluştu.",
-    //"ImageFailedToLoad": "Resim Yüklenemedi.",
-    //"GeneralIdentityError": "Bir hata oluştu.Lütfen girdilerinizi kontrol ediniz.",
-    //"GeneralUploadError": "Bir hata oluştu.Lütfen tekrar deneyiniz.",
-    //"GeneralError": "Bir hata oluştu.",
+    "NotAllowedProcess": "Not Allowed Process",
+    "UnexpectedErrorPage": "Unexpected Error Page",
+    "SorryAnErrorHasOccurred": "Sorry An Error Has Occurred",
+    "ImageFailedToLoad": "Image Failed To Load",
+    "GeneralIdentityError": "An error has occurred. Please check your inputs.",
+    "GeneralUploadError": "An error occurred. Please try again.",
+    "EntityNotFoundError": "Content not found.",
+    "GeneralError": "Something went wrong.", // Controller tarafındaki bilinmeyen hata
+    "UnexpectedError": "An unexpected error has occurred", //Javascript tarafındaki bilinmeyen hata
 
+    //SUCCESS & COnfirms
+    "SuccessfullyCompleted": "Your transaction has been successfully completed",
+    "FormRequestSuccessfully": "Your request has been received successfully. We will contact you as soon as possible. Thank you",
+    //"FormRequestSuccessfully2": "Talebiniz başarıyla alındı.</br> En kısa sürede sizinle iletişime geçeceğiz.</br>Teşekkürler",
 
-    ////SUCCESS
-    //"SuccessfullyCompleted": "İşleminiz başarıyla tamamlandı",
-    //"MessageSuccessfullyDeleted": "Mesaj başarıyla silindi",
+    "SuccessfullyDeleted": "Record successfully deleted",
+    "DeleteConfirmMessage": "Are you sure you want to delete the recording?",
 
+    "Turkish": "Türkçe",
+    "English": "English",
 
-    "Turkish": "Turkish",
-    "English": "English"
+    //HOME > FIRST
+    "Sectionh6": "Buraya da bişey ekleriz", //"Over 36,500+ Active Listings",
+    "Sectionh2": "Buraya Güzel Bir Başlık Lazım", //"Find Nearby Places &amp; Things"
+
+    //HOME > ABOUT
+    "AboutTitle": "HOW THE PROCESS WORKS",
+    //"AboutMarque": "Buraya birşeyler ekleriz",
+    "AboutCallCenter": "You are starting a meeting with<br> our Special Professional Consultants.",
+    "AboutDocumentQuestion": "We Provide the Detection of<br> Your Required Missing Documents.",
+    "AboutHandShake": "We begin the <br> Process with your <br> Official Contract, Tailored to the Client.",
+    "AboutDocumentTick": "Our individual domestic and international consultants start your transactions by completing the deficiencies in your file.",
+    "AboutLast": "With your Visa <br> You are completing <br> your  First Step <br> to Your New Life.",
+
+    //HOME > CONTACT
+    "ContactTitle": "CONTACT",
+    "ContactNamePlaceHolder": "Name*",
+    "ContactSurnNamePlaceHolder": "Surname*",
+    "ContactEmailPlaceHolder": "Email*",
+    "ContactPhonePlaceHolder": "Phone*",
+    "ContactGenderPlaceHolder": "Select Gender*",
+    "ContactCountryPlaceHolder": "Select Country*",
+    "ContactDescriptionPlaceHolder": "Enter Description"
   }
 }
