--- a/src/WorldTravel.Domain.Shared/Localization/WorldTravel/tr.json
+++ b/src/WorldTravel.Domain.Shared/Localization/WorldTravel/tr.json
@@ -68,7 +68,6 @@
     "Comment": "Yorum",
     "Comments": "Yorumlar",
     "Details": "Detaylar",
-    //"ImageKey": "Görsel Key",
     //"CountryFlagImageUrl": "Ülke Bayrak Resmi",
     "PopulerCountries": "POPÜLER ÜLKELER",
     "PopularServices": "POPÜLER HİZMETLER",
@@ -171,7 +170,19 @@
     "ContactPhonePlaceHolder": "Telefonunuz*",
     "ContactGenderPlaceHolder": "Cinsiyet Seçiniz*",
     "ContactCountryPlaceHolder": "Ülke Seçiniz*",
-    "ContactDescriptionPlaceHolder": "Açıklama Giriniz"
+    "ContactDescriptionPlaceHolder": "Açıklama Giriniz",
 
+
+
+    //NEW
+    "VisaTypeManagement": "Vize Türleri Yönetimi",
+    "VisaTypes": "Vize Türleri",
+    "NewVisaType": "Yeni Vize Türü Ekle",
+    "VisaTitle": "Vize Başlığı",
+    "PopularVisaTypes": "POPÜLER VİZE TÜRLERİ",
+    "Visas": "VİZELER",
+    "New": "Yeni",
+    "SeeAll": "Tümünü Gör",
+    "EnterVisaTypeTitle": "Vize Adı Giriniz"
   }
 }
